--- a/new.html
+++ b/new.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hacker News Alpine - Top</title>
+  <title>Hacker News Alpine - Newest</title>
   <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.11.1/dist/cdn.min.js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="main.js"></script>
@@ -25,10 +25,11 @@
     <header>
       <div class="border-b border-gray-200">
         <nav class="-mb-px flex justify-center space-x-4" aria-label="Tabs">
-          <a href="/" class="border-cyan-500 text-cyan-600 whitespace-nowrap py-2 px-1 border-b-2 font-medium text-sm"
-            aria-current="page">Top</a>
+          <a href="/"
+            class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-2 px-1 border-b-3 font-medium text-sm">Top</a>
           <a href="/new.html"
-            class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-2 px-1 border-b-3 font-medium text-sm">New</a>
+            class="border-cyan-500 text-cyan-600 whitespace-nowrap py-2 px-1 border-b-2 font-medium text-sm"
+            aria-current="page">New</a>
           <a href="/ask.html"
             class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-2 px-1 border-b-3 font-medium text-sm">Ask</a>
         </nav>
@@ -36,7 +37,7 @@
     </header>
 
     <!-- Content -->
-    <section x-cloak x-data="{ items: [] }" x-init=" items = await getItems('top') ">
+    <section x-cloak x-data="{ items: [] }" x-init=" items = await getItems('new') ">
       <ul role="list" class="space-y-3">
         <template x-for="item, index in items" :key="item.id">
           <li class="flex bg-white px-4 sm:px-6 py-4 shadow rounded-md divide-x">
