--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <nav class="-mb-px flex justify-center space-x-4" aria-label="Tabs">
           <template x-for="section in Object.keys(SECTIONS)">
             <a :href="`/?section=${section}&page=1`" x-text="section" class="capitalize"
-              :class="currentSection === section ? 'border-cyan-500 text-cyan-600 whitespace-nowrap py-2 px-1 border-b-2 font-medium text-sm' : 'border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-2 px-1 border-b-3 font-medium text-sm'"
+              :class="currentSection === section ? 'border-cyan-500 text-cyan-600 whitespace-nowrap py-2 px-1 border-b-2 font-medium text-sm' : 'border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-2 px-1 font-medium text-sm'"
               :aria-current="currentSection === section ? 'page' : ''">
             </a>
           </template>
