--- a/item.html
+++ b/item.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon.png">
   <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.11.1/dist/cdn.min.js"></script>
   <script src="https://cdn.tailwindcss.com?plugins=typography"></script>
-  <script src="main.js"></script>
+  <script src="assets/main.js"></script>
 </head>
 
 <style>
