--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon.png">
   <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.12.0/dist/cdn.min.js"></script>
-  <script src="/assets/main.js"></script>
-  <link href="/assets/output.css" rel="stylesheet">
+  <script src="./assets/main.js"></script>
+  <link href="./assets/output.css" rel="stylesheet">
   <script>
     document.addEventListener('alpine:init', () => {
       Alpine.store('pagination', {
@@ -38,7 +38,7 @@
       <div class="border-b border-gray-200">
         <nav class="-mb-px flex justify-center space-x-4" aria-label="Tabs">
           <template x-for="section in Object.keys(SECTIONS)">
-            <a :href="`/?section=${section}&page=1`" x-text="section" class="capitalize"
+            <a :href="`./?section=${section}&page=1`" x-text="section" class="capitalize"
               :class="currentSection === section ? 'border-cyan-500 text-cyan-600 whitespace-nowrap py-2 px-1 border-b-2 font-medium text-sm' : 'border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-2 px-1 font-medium text-sm'"
               :aria-current="currentSection === section ? 'page' : ''">
             </a>
