--- a/item.html
+++ b/item.html
@@ -7,9 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hacker News Alpine - Baumannzone</title>
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon.png">
-  <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.11.1/dist/cdn.min.js"></script>
-  <script src="https://cdn.tailwindcss.com?plugins=typography"></script>
-  <script src="assets/main.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.12.0/dist/cdn.min.js"></script>
+  <script src="./assets/main.js"></script>
+  <link href="./assets/output.css" rel="stylesheet">
 </head>
 
 <style>
